
Phoronix Test Suite (Git)

pts-core: Update Mac OS X to macOS references
pts-core: Add result-file-stats sub-command to show more test result statistics
pts-core: Show geometric mean and harmonic mean data at end of benchmarking process when relevant as part of post-run stats
pts-core: Improved formatting of file download text user interface for downloading of dependencies on Microsoft Windows

Phoronix Test Suite 8.6.0 Milestone 1
7 January 2019

pts-core: No longer clear test profile identifiers on secondary saved results
pts-core: Add compare-results-to-baseline sub-command for comparing one result file (baseline) against a set of results for text look at relative perf
pts-core: Minor fixes
pts-core: Show wins and losses summary after testing on large result files
pts-core: On two-way result files, after test completion show comparison of current result against previous result (baseline)
pts-core: Add ShowPostRunStatistics user configuration XML option to toggle whether various test statistics are printed at the end of testing
pts-core: Add recently-added-tests sub-command to show newly added test profiles / alternative to openbenchmarking-changes/recently-updated-tests
pts-core: Allow outputting line graphs to terminal interface as basic box plot graphs
phodevi: Improve Linux multiple network device reporting
phodevi: LXQt desktop version reporting
phodevi: Update for Microsoft Windows Server 2019
system_monitor: Allow outputting system monitor graphs to terminal interface inline

Phoronix Test Suite 8.4.1-Skiptvet
9 December 2018

pts-core: Workaround for RHEL 7.6 PHP having buggy CURL that is causing seg faults
pts-core: Ensure "." doesn't get set in PATH when launching phoronix-test-suite
pts-core: Allow PRESET_OPTIONS env var to be used when in batch mode
pts-core: FreeBSD updates
pts-core: Add PRESET_OPTIONS_VALUES environment variable that is similar to PRESET_OPTIONS but for explicit values
phodevi: Improved Radeon AMDGPU frequency detection/reporting